@@ -15,9 +15,7 @@
  */
 package ghidra.app.util.opinion;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Path;
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -31,7 +29,7 @@ import ghidra.app.util.bin.ByteProvider;
 import ghidra.app.util.importer.*;
 import ghidra.formats.gfilesystem.*;
 import ghidra.framework.model.*;
-import ghidra.program.model.address.Address;
+import ghidra.plugin.importer.ImporterPlugin;
 import ghidra.program.model.lang.*;
 import ghidra.program.model.listing.Library;
 import ghidra.program.model.listing.Program;
@@ -49,46 +47,94 @@ import ghidra.util.task.TaskMonitor;
  */
 public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader {
 
+	/**
+	 * Option to attempt to fix up the {@link Loaded} {@link Program}'s external programs with
+	 * libraries discovered in the project. This alone does not cause new library programs to be 
+	 * loaded.
+	 */
 	public static final String LINK_EXISTING_OPTION_NAME = "Link Existing Project Libraries";
 	static final boolean LINK_EXISTING_OPTION_DEFAULT = true;
 
+	/**
+	 * Path of a {@link DomainFolder} to search for libraries
+	 */
 	public static final String LINK_SEARCH_FOLDER_OPTION_NAME = "Project Library Search Folder";
 	static final String LINK_SEARCH_FOLDER_OPTION_DEFAULT = "";
 
+	/**
+	 * Whether or not to search for libraries on disk (or in a {@link GFileSystem})
+	 */
 	public static final String LOAD_LIBRARY_OPTION_NAME = "Load Libraries From Disk";
 	static final boolean LOAD_LIBRARY_OPTION_DEFAULT = false;
-
+	
+	/**
+	 * A dummy option used to produce a custom renderer to select library search paths.
+	 * 
+	 * @see LibrarySearchPathDummyOption
+	 */
 	public static final String LIBRARY_SEARCH_PATH_DUMMY_OPTION_NAME = "Library Search Paths";
 
+	/**
+	 * How many levels of libraries to load
+	 */
 	public static final String DEPTH_OPTION_NAME = "Recursive Library Load Depth";
 	static final int DEPTH_OPTION_DEFAULT = 1;
 
+	/**
+	 * Path of a {@link DomainFolder} to save libraries to. This location will also be used as
+	 * a location to {@link #LINK_EXISTING_OPTION_NAME search for already-loaded libraries}.
+	 */
 	public static final String LIBRARY_DEST_FOLDER_OPTION_NAME = "Library Destination Folder";
 	static final String LIBRARY_DEST_FOLDER_OPTION_DEFAULT = "";
 
+	public static final String MIRROR_LAYOUT_OPTION_NAME = "Mirror Library Disk Layout";
+
+	/**
+	 * A hidden option used by the {@link ImporterPlugin}'s "Load Libraries" action to inform this
+	 * {@link Loader} that the {@link Program} to import has already been saved to the project and
+	 * is currently open, and that only libraries should be loaded.
+	 */
 	public static final String LOAD_ONLY_LIBRARIES_OPTION_NAME = "Only Load Libraries"; // hidden
 	static final boolean LOAD_ONLY_LIBRARIES_OPTION_DEFAULT = false;
 
 	/**
 	 * Loads bytes in a particular format into the given {@link Program}.
 	 *
-	 * @param provider The bytes to load.
-	 * @param loadSpec The {@link LoadSpec} to use during load.
-	 * @param options The load options.
 	 * @param program The {@link Program} to load into.
-	 * @param monitor A cancelable task monitor.
-	 * @param log The message log.
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @throws IOException if there was an IO-related problem loading.
 	 * @throws CancelledException if the user cancelled the load.
 	 */
-	protected abstract void load(ByteProvider provider, LoadSpec loadSpec, List<Option> options,
-			Program program, TaskMonitor monitor, MessageLog log)
+	protected abstract void load(Program program, ImporterSettings settings)
 			throws CancelledException, IOException;
 
+	/**
+	 * {@inheritDoc}
+	 * <p>
+	 * In addition to loading the given program bytes, this implementation will attempt to locate
+	 * the libraries that the program links to from the
+	 * {@link #LINK_SEARCH_FOLDER_OPTION_NAME project library search folder}, the
+	 * {@link #LIBRARY_DEST_FOLDER_OPTION_NAME library destination folder} and the
+	 * {@link #LOAD_LIBRARY_OPTION_NAME libraries found on disk}. All of these locations are
+	 * controlled by loader options.
+	 * <P>
+	 * If the hidden {@link #LOAD_ONLY_LIBRARIES_OPTION_NAME} option is set and the given project
+	 * is not {@code null}, it is assumed that a {@link DomainFile} exists at 
+	 * {@code projectFolderPath/loadedName}, is open, and the provider corresponds to its contents.
+	 * If this is the case, the primary (first) {@link Loaded} {@link Program} in the returned list
+	 * will NOT be affected by a {@link LoadResults#save(TaskMonitor)} operation. It will be the 
+	 * responsibility of the user to save this open program if desired.
+	 * 
+	 * @return A {@link List} of one or more {@link Loaded} {@link Program}s (created but not 
+	 *   saved). The first element in the {@link List} will the primary program, with the remaining
+	 *   elements being any newly loaded libraries.
+	 * @throws LoadException if the load failed in an unexpected way. If the
+	 *   {@link #LOAD_ONLY_LIBRARIES_OPTION_NAME} option is set, this exception will be thrown if
+	 *   the {@link DomainFile} at {@code projectFolderPath/loadedName} does not correspond to an 
+	 *   open {@link Program}.
+	 */
 	@Override
-	protected List<Loaded<Program>> loadProgram(ByteProvider provider, String loadedName,
-			Project project, String projectFolderPath, LoadSpec loadSpec, List<Option> options,
-			MessageLog log, Object consumer, TaskMonitor monitor)
+	protected List<Loaded<Program>> loadProgram(ImporterSettings settings)
 			throws CancelledException, IOException {
 
 		List<Loaded<Program>> loadedProgramList = new ArrayList<>();
@@ -98,58 +144,65 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		try {
 			// Load (or get) the primary program
 			Program program = null;
-			if (!shouldLoadOnlyLibraries(options)) {
-				program = doLoad(provider, loadedName, loadSpec, libraryNameList, options, consumer,
-					log, monitor);
-				loadedProgramList.add(new Loaded<>(program, loadedName, projectFolderPath));
-				log.appendMsg("------------------------------------------------\n");
+			if (!shouldLoadOnlyLibraries(settings)) {
+				program = doLoad(libraryNameList, settings);
+				loadedProgramList.add(new Loaded<>(program, settings));
+				settings.log().appendMsg("------------------------------------------------\n");
 			}
-			else if (project != null) {
-				ProjectData projectData = project.getProjectData();
-				DomainFile domainFile = projectData.getFile(projectFolderPath + "/" + loadedName);
+			else {
+				if (settings.project() == null) {
+					throw new LoadException("Cannot load only libraries...project is null");
+				}
+				String projectPath = FSUtilities.appendPath(settings.projectRootPath(),
+					settings.importName());
+				DomainFile domainFile = settings.project().getProjectData().getFile(projectPath);
 				if (domainFile == null) {
 					throw new LoadException(
 						"Cannot load only libraries for a non-existant program");
 				}
-				program = (Program) domainFile.getOpenedDomainObject(consumer);
-				if (program == null) {
-					throw new LoadException("Failed to acquire a Program");
+				if (!Program.class.isAssignableFrom(domainFile.getDomainObjectClass())) {
+					throw new LoadException("Cannot load only libraries for a non-program");
 				}
-				loadedProgramList.add(new Loaded<>(program, domainFile));
-				libraryNameList.addAll(getLibraryNames(provider, program));
+				program = (Program) domainFile.getOpenedDomainObject(settings.consumer());
+				if (program == null) {
+					throw new LoadException("Failed to acquire an open Program");
+				}
+				loadedProgramList.add(new LoadedOpen<>(program, domainFile,
+					FSRL.fromProgram(program), settings.consumer()));
+				libraryNameList.addAll(getLibraryNames(settings.provider(), program));
 			}
 
 			// Load the libraries
-			loadedProgramList.addAll(loadLibraries(provider, program, project, projectFolderPath,
-				loadSpec, options, log, consumer, libraryNameList, monitor));
+			loadedProgramList.addAll(loadLibraries(program, libraryNameList, settings));
 
 			success = true;
 			return loadedProgramList;
 		}
 		finally {
 			if (!success) {
-				release(loadedProgramList, consumer);
+				loadedProgramList.forEach(Loaded::close);
 			}
 		}
 	}
 
 	@Override
-	protected void loadProgramInto(ByteProvider provider, LoadSpec loadSpec,
-			List<Option> options, MessageLog log, Program program, TaskMonitor monitor)
+	protected void loadProgramInto(Program program, ImporterSettings settings)
 			throws CancelledException, LoadException, IOException {
 
-		LanguageCompilerSpecPair pair = loadSpec.getLanguageCompilerSpec();
+		LanguageCompilerSpecPair pair = settings.loadSpec().getLanguageCompilerSpec();
 		LanguageID languageID = program.getLanguageID();
 		CompilerSpecID compilerSpecID = program.getCompilerSpec().getCompilerSpecID();
 		if (!(pair.languageID.equals(languageID) && pair.compilerSpecID.equals(compilerSpecID))) {
-			String message = provider.getAbsolutePath() +
+			String message = settings.provider().getAbsolutePath() +
 				" does not have the same language/compiler spec as program " + program.getName();
-			log.appendMsg(message);
+			settings.log().appendMsg(message);
 			throw new LoadException(message);
 		}
-		log.appendMsg("Loading " + provider.getAbsolutePath() + "...");
-		load(provider, loadSpec, options, program, monitor, log);
-		log.appendMsg("--------------------------------------------------------------------\n");
+		settings.log().appendMsg("Loading " + settings.provider().getAbsolutePath() + "...");
+		load(program, settings);
+		settings.log()
+				.appendMsg(
+					"--------------------------------------------------------------------\n");
 	}
 
 	/**
@@ -158,43 +211,57 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * Fix up program's external library entries so that they point to a path in the project.
 	 */
 	@Override
-	protected void postLoadProgramFixups(List<Loaded<Program>> loadedPrograms, Project project,
-			LoadSpec loadSpec, List<Option> options, MessageLog log, TaskMonitor monitor)
-			throws CancelledException, IOException {
+	protected void postLoadProgramFixups(List<Loaded<Program>> loadedPrograms,
+			ImporterSettings settings) throws CancelledException, IOException {
+
+		TaskMonitor monitor = settings.monitor();
+
 		if (loadedPrograms.isEmpty() ||
-			(!isLinkExistingLibraries(options) && !isLoadLibraries(options))) {
+			(!isLinkExistingLibraries(settings) && !isLoadLibraries(settings))) {
 			return;
 		}
 
-		List<DomainFolder> searchFolders =
-			getLibrarySearchFolders(loadedPrograms, project, options, log);
+		List<DomainFolder> searchFolders = getLibrarySearchFolders(loadedPrograms, settings);
 
-		List<LibrarySearchPath> searchPaths = getLibrarySearchPaths(
-			loadedPrograms.getFirst().getDomainObject(), loadSpec, options, log, monitor);
+		Program firstProgram = loadedPrograms.getFirst().getDomainObject(this);
+		List<LibrarySearchPath> searchPaths;
+		try {
+			searchPaths = getLibrarySearchPaths(firstProgram, settings);
+		}
+		finally {
+			firstProgram.release(this);
+		}
 
-		List<Loaded<Program>> saveablePrograms =
-			loadedPrograms.stream().filter(Predicate.not(Loaded::shouldDiscard)).toList();
+		List<Loaded<Program>> saveablePrograms = loadedPrograms
+				.stream()
+				.filter(loaded -> loaded.check(Predicate.not(Program::isTemporary)))
+				.toList();
 
 		monitor.initialize(saveablePrograms.size());
 		for (Loaded<Program> loadedProgram : saveablePrograms) {
 			monitor.increment();
 
-			Program program = loadedProgram.getDomainObject();
-			ExternalManager extManager = program.getExternalManager();
-			String[] extLibNames = extManager.getExternalLibraryNames();
-			if (extLibNames.length == 0 ||
-				(extLibNames.length == 1 && Library.UNKNOWN.equals(extLibNames[0]))) {
-				continue; // skip program if no libraries defined
-			}
-
-			monitor.setMessage("Resolving..." + program.getName());
-			int id = program.startTransaction("Resolving external references");
+			Program program = loadedProgram.getDomainObject(this);
 			try {
-				resolveExternalLibraries(program, saveablePrograms, searchFolders, searchPaths,
-					options, monitor, log);
+				ExternalManager extManager = program.getExternalManager();
+				String[] extLibNames = extManager.getExternalLibraryNames();
+				if (extLibNames.length == 0 ||
+					(extLibNames.length == 1 && Library.UNKNOWN.equals(extLibNames[0]))) {
+					continue; // skip program if no libraries defined
+				}
+
+				monitor.setMessage("Resolving..." + program.getName());
+				int id = program.startTransaction("Resolving external references");
+				try {
+					resolveExternalLibraries(program, saveablePrograms, searchFolders, searchPaths,
+						settings);
+				}
+				finally {
+					program.endTransaction(id, true);
+				}
 			}
 			finally {
-				program.endTransaction(id, true);
+				program.release(this);
 			}
 		}
 	}
@@ -211,21 +278,23 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 
 	@Override
 	public List<Option> getDefaultOptions(ByteProvider provider, LoadSpec loadSpec,
-			DomainObject domainObject, boolean loadIntoProgram) {
-		List<Option> list =
-			super.getDefaultOptions(provider, loadSpec, domainObject, loadIntoProgram);
+			DomainObject domainObject, boolean loadIntoProgram, boolean mirrorFsLayout) {
+		List<Option> list = super.getDefaultOptions(provider, loadSpec, domainObject,
+			loadIntoProgram, mirrorFsLayout);
 
 		list.add(new Option(LINK_EXISTING_OPTION_NAME, LINK_EXISTING_OPTION_DEFAULT, Boolean.class,
 			Loader.COMMAND_LINE_ARG_PREFIX + "-linkExistingProjectLibraries"));
 		list.add(new DomainFolderOption(LINK_SEARCH_FOLDER_OPTION_NAME,
-			Loader.COMMAND_LINE_ARG_PREFIX + "-projectLibrarySearchFolder"));
+			Loader.COMMAND_LINE_ARG_PREFIX + "-projectLibrarySearchFolder", mirrorFsLayout));
 		list.add(new Option(LOAD_LIBRARY_OPTION_NAME, LOAD_LIBRARY_OPTION_DEFAULT, Boolean.class,
 			Loader.COMMAND_LINE_ARG_PREFIX + "-loadLibraries"));
 		list.add(new LibrarySearchPathDummyOption(LIBRARY_SEARCH_PATH_DUMMY_OPTION_NAME));
 		list.add(new Option(DEPTH_OPTION_NAME, DEPTH_OPTION_DEFAULT, Integer.class,
 			Loader.COMMAND_LINE_ARG_PREFIX + "-libraryLoadDepth"));
 		list.add(new DomainFolderOption(LIBRARY_DEST_FOLDER_OPTION_NAME,
-			Loader.COMMAND_LINE_ARG_PREFIX + "-libraryDestinationFolder"));
+			Loader.COMMAND_LINE_ARG_PREFIX + "-libraryDestinationFolder", mirrorFsLayout));
+		list.add(new Option(MIRROR_LAYOUT_OPTION_NAME, Boolean.class, mirrorFsLayout,
+			Loader.COMMAND_LINE_ARG_PREFIX + "-libraryMirrorLayout", null, null, mirrorFsLayout));
 		list.add(new Option(LOAD_ONLY_LIBRARIES_OPTION_NAME, Boolean.class,
 			LOAD_ONLY_LIBRARIES_OPTION_DEFAULT,
 			Loader.COMMAND_LINE_ARG_PREFIX + "-loadOnlyLibraries", null, null, true));
@@ -241,6 +310,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 				String name = option.getName();
 				if (name.equals(LINK_EXISTING_OPTION_NAME) ||
 					name.equals(LOAD_LIBRARY_OPTION_NAME) ||
+					name.equals(MIRROR_LAYOUT_OPTION_NAME) ||
 					name.equals(LOAD_ONLY_LIBRARIES_OPTION_NAME)) {
 					if (!Boolean.class.isAssignableFrom(option.getValueClass())) {
 						return "Invalid type for option: " + name + " - " + option.getValueClass();
@@ -270,39 +340,41 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	/**
 	 * Checks to see if existing libraries should be linked
 	 * 
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return True if existing libraries should be linked; otherwise, false
 	 */
-	protected boolean isLinkExistingLibraries(List<Option> options) {
-		return OptionUtils.getOption(LINK_EXISTING_OPTION_NAME, options,
+	protected boolean isLinkExistingLibraries(ImporterSettings settings) {
+		return OptionUtils.getOption(LINK_EXISTING_OPTION_NAME, settings.options(),
 			LINK_EXISTING_OPTION_DEFAULT);
 	}
 
 	/**
 	 * Gets the {@link DomainFolder project folder} to search for existing libraries
 	 * 
-	 * @param project The {@link Project}. Could be null if there is no project.
 	 * @param program The {@link Program} being loaded
-	 * @param projectFolderPath The project folder path the program will get saved to. Could be null
-	 *   if the program is not getting saved to the project.
-	 * @param options a {@link List} of {@link Option}s
-	 * @param log The log
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The path of the project folder to search for existing libraries, or null if no
 	 *   project folders can be or should be searched
 	 */
-	protected DomainFolder getLinkSearchFolder(Project project, Program program,
-			String projectFolderPath, List<Option> options, MessageLog log) {
-		if (!shouldSearchAllPaths(program, options, log) && !isLinkExistingLibraries(options)) {
+	protected DomainFolder getLinkSearchFolder(Program program, ImporterSettings settings) {
+		if (!shouldSearchAllPaths(program, settings) && !isLinkExistingLibraries(settings)) {
 			return null;
 		}
-		if (project == null) {
+		if (settings.project() == null) {
 			return null;
 		}
 
-		String linkSearchFolderPath = OptionUtils.getOption(LINK_SEARCH_FOLDER_OPTION_NAME, options,
-			LINK_SEARCH_FOLDER_OPTION_DEFAULT);
+		ProjectData projectData = settings.project().getProjectData();
+		if (settings.mirrorFsLayout()) {
+			return projectData.getFolder(settings.projectRootPath());
+		}
 
-		ProjectData projectData = project.getProjectData();
+		String linkSearchFolderPath = OptionUtils.getOption(LINK_SEARCH_FOLDER_OPTION_NAME,
+			settings.options(), LINK_SEARCH_FOLDER_OPTION_DEFAULT);
+
+		String projectFolderPath = FSUtilities.appendPath(settings.projectRootPath(),
+			settings.importPathOnly());
+
 		if (linkSearchFolderPath.isBlank()) {
 			if (projectFolderPath == null) {
 				return null;
@@ -316,57 +388,68 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	/**
 	 * Checks to see if libraries from disk should be loaded
 	 * 
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return True if libraries from disk should be loaded; otherwise, false
 	 */
-	protected boolean isLoadLibraries(List<Option> options) {
-		return OptionUtils.getOption(LOAD_LIBRARY_OPTION_NAME, options,
+	protected boolean isLoadLibraries(ImporterSettings settings) {
+		return OptionUtils.getOption(LOAD_LIBRARY_OPTION_NAME, settings.options(),
 			LOAD_LIBRARY_OPTION_DEFAULT);
+	}
+
+	/**
+	 * Checks to see if library organization mirrors filesystem layout
+	 * 
+	 * @param settings The {@link Loader.ImporterSettings}
+	 * @return True if library organization mirrors filesystem layout; false if flat layout
+	 */
+	protected boolean isMirroredLayout(ImporterSettings settings) {
+		return OptionUtils.getOption(MIRROR_LAYOUT_OPTION_NAME, settings.options(),
+			settings.mirrorFsLayout());
 	}
 
 	/**
 	 * Checks to see if only libraries should be loaded (i.e., not the main program)
 	 * 
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return True if only libraries should be loaded; otherwise, false
 	 */
-	protected boolean shouldLoadOnlyLibraries(List<Option> options) {
-		return OptionUtils.getOption(LOAD_ONLY_LIBRARIES_OPTION_NAME, options,
+	protected boolean shouldLoadOnlyLibraries(ImporterSettings settings) {
+		return OptionUtils.getOption(LOAD_ONLY_LIBRARIES_OPTION_NAME, settings.options(),
 			LOAD_ONLY_LIBRARIES_OPTION_DEFAULT);
 	}
 
 	/**
 	 * Gets the desired recursive library load depth
 	 * 
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The desired recursive library load depth
 	 */
-	protected int getLibraryLoadDepth(List<Option> options) {
-		return OptionUtils.getOption(DEPTH_OPTION_NAME, options, DEPTH_OPTION_DEFAULT);
+	protected int getLibraryLoadDepth(ImporterSettings settings) {
+		return OptionUtils.getOption(DEPTH_OPTION_NAME, settings.options(), DEPTH_OPTION_DEFAULT);
 	}
 
 	/**
 	 * Gets the project folder path to load the libraries into.  It does not have to exist in the
 	 * project yet.
 	 * 
-	 * @param project The {@link Project}. Could be null if there is no project.
-	 * @param projectFolderPath The project folder path the program will get saved to. Could be null
-	 *   if the program is not getting saved to the project.
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The path of the project folder to load the libraries into.  Could be null if the 
 	 *   specified project is null or a destination folder path could not be determined.
 	 */
-	protected String getLibraryDestinationFolderPath(Project project, String projectFolderPath,
-			List<Option> options) {
-		if (project == null) {
+	protected String getLibraryDestinationFolderPath(ImporterSettings settings) {
+		if (settings.project() == null) {
 			return null;
 		}
 
+		if (settings.mirrorFsLayout()) {
+			return settings.projectRootPath();
+		}
+
 		String libraryDestinationFolderPath = OptionUtils.getOption(LIBRARY_DEST_FOLDER_OPTION_NAME,
-			options, LIBRARY_DEST_FOLDER_OPTION_DEFAULT);
+			settings.options(), LIBRARY_DEST_FOLDER_OPTION_DEFAULT);
 
 		if (libraryDestinationFolderPath.isBlank()) {
-			return projectFolderPath;
+			return settings.projectRootPath();
 		}
 
 		return FilenameUtils.separatorsToUnix(libraryDestinationFolderPath);
@@ -377,22 +460,21 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * existing libraries.  It will only be returned if the options to load new libraries into the
 	 * project are set.
 	 * 
-	 * @param project The {@link Project}. Could be null if there is no project.
 	 * @param libraryDestinationFolderPath The path of the project folder to load the libraries 
 	 *   into.  Could be null (@see #getLibraryDestinationFolderPath(Project, String, List)).
-	 * @param options a {@link List} of {@link Option}s
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The path of the destination project folder to search for existing libraries, or null
 	 *   if the destination folder is not being used or should not be searched
 	 */
-	protected DomainFolder getLibraryDestinationSearchFolder(Project project,
-			String libraryDestinationFolderPath, List<Option> options) {
-		if (project == null || libraryDestinationFolderPath == null) {
+	protected DomainFolder getLibraryDestinationSearchFolder(String libraryDestinationFolderPath,
+			ImporterSettings settings) {
+		if (settings.project() == null || libraryDestinationFolderPath == null) {
 			return null;
 		}
-		if (!isLoadLibraries(options)) {
+		if (!isLoadLibraries(settings)) {
 			return null;
 		}
-		return project.getProjectData().getFolder(libraryDestinationFolderPath);
+		return settings.project().getProjectData().getFolder(libraryDestinationFolderPath);
 	}
 
 	/**
@@ -400,24 +482,25 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * options
 	 * 
 	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
-	 * @param project The {@link Project} to load into. Could be null if there is no project.
-	 * @param options The {@link List} of {@link Option}s
-	 * @param log The log
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return A {@link List} of library search {@link DomainFolder folders} based on the current
 	 * options
 	 */
 	protected List<DomainFolder> getLibrarySearchFolders(List<Loaded<Program>> loadedPrograms,
-			Project project, List<Option> options, MessageLog log) {
-		List<DomainFolder> searchFolders = new ArrayList<>();
-		String projectFolderPath = loadedPrograms.get(0).getProjectFolderPath();
-		String destPath = getLibraryDestinationFolderPath(project, projectFolderPath, options);
-		DomainFolder destSearchFolder =
-			getLibraryDestinationSearchFolder(project, destPath, options);
-		DomainFolder linkSearchFolder = getLinkSearchFolder(project,
-			loadedPrograms.getFirst().getDomainObject(), projectFolderPath, options, log);
-		Optional.ofNullable(destSearchFolder).ifPresent(searchFolders::add);
-		Optional.ofNullable(linkSearchFolder).ifPresent(searchFolders::add);
-		return searchFolders;
+			ImporterSettings settings) {
+		Program firstProgram = loadedPrograms.getFirst().getDomainObject(this);
+		try {
+			List<DomainFolder> searchFolders = new ArrayList<>();
+			String destPath = getLibraryDestinationFolderPath(settings);
+			DomainFolder destSearchFolder = getLibraryDestinationSearchFolder(destPath, settings);
+			DomainFolder linkSearchFolder = getLinkSearchFolder(firstProgram, settings);
+			Optional.ofNullable(destSearchFolder).ifPresent(searchFolders::add);
+			Optional.ofNullable(linkSearchFolder).ifPresent(searchFolders::add);
+			return searchFolders;
+		}
+		finally {
+			firstProgram.release(this);
+		}
 	}
 
 	/**
@@ -425,36 +508,10 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * of what options are set
 	 * 
 	 * @param program The {@link Program} being loaded
-	 * @param options a {@link List} of {@link Option}s
-	 * @param log The log
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return True if all possible search paths should be used, regardless of what options are set
 	 */
-	protected boolean shouldSearchAllPaths(Program program, List<Option> options, MessageLog log) {
-		return false;
-	}
-
-	/**
-	 * Specifies if the library filenames specified by this loader should be exact case match
-	 * or case-insensitive.
-	 * <p>
-	 * Derived loader classes should override this method and specify if the OS that normally
-	 * handles this type of binary is case-insensitive.
-	 *
-	 * @return True if case-insensitive or false if case-sensitive.
-	 */
-	protected boolean isCaseInsensitiveLibraryFilenames() {
-		return false;
-	}
-
-	/**
-	 * Specifies if this loader can refer to library filenames without filename extensions.
-	 * <p>
-	 * Derived loader classes should override this method if library filename extensions are
-	 * optional.  If they are required, there is no need to override this method.
-	 * 
-	 * @return True if library filename extensions are optional; otherwise, false
-	 */
-	protected boolean isOptionalLibraryFilenameExtensions() {
+	protected boolean shouldSearchAllPaths(Program program, ImporterSettings settings) {
 		return false;
 	}
 
@@ -481,19 +538,14 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @param library The loaded library {@link Program}
 	 * @param libraryName The name of the library
 	 * @param libraryFsrl The library {@link FSRL}
-	 * @param provider The library bytes
 	 * @param unprocessed The {@link Queue} of {@link UnprocessedLibrary unprocessed libraries}
 	 * @param depth The load depth of the library to load
-	 * @param loadSpec The {@link LoadSpec} used for the load
-	 * @param options The options
-	 * @param log The log
-	 * @param monitor A cancelable monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @throws IOException If an IO-related error occurred
 	 * @throws CancelledException If the user cancelled the action
 	 */
 	protected void processLibrary(Program library, String libraryName, FSRL libraryFsrl,
-			ByteProvider provider, Queue<UnprocessedLibrary> unprocessed, int depth,
-			LoadSpec loadSpec, List<Option> options, MessageLog log, TaskMonitor monitor)
+			Queue<UnprocessedLibrary> unprocessed, int depth, ImporterSettings settings)
 			throws IOException, CancelledException {
 		// Default behavior is to do nothing
 	}
@@ -501,40 +553,32 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	/**
 	 * Loads the given list of libraries as {@link Loaded} {@link Program}s
 	 *
-	 * @param provider The {@link ByteProvider} of the program being loaded
 	 * @param program The {@link Program} being loaded
-	 * @param project The {@link Project}. Could be null if there is no project.
-	 * @param projectFolderPath The project folder path the program will get saved to. Could be null
-	 *   if the program is not getting saved to the project.
-	 * @param desiredLoadSpec The desired {@link LoadSpec}
-	 * @param options The load options
-	 * @param log The log
-	 * @param consumer A consumer object for {@link DomainObject}s generated
-	 * @param monitor A cancelable task monitor
-	 * @return A {@link List} of newly loaded programs and libraries.  Any program in the list is 
+	 * @param libraryNameList The {@link List} of libraries to load
+	 * @param settings The {@link Loader.ImporterSettings}
+	 * @return A {@link List} of newly loaded programs and libraries. Any program in the list is 
 	 *   the caller's responsibility to release.
 	 * @throws IOException if there was an IO-related problem loading
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	private List<Loaded<Program>> loadLibraries(ByteProvider provider, Program program,
-			Project project, String projectFolderPath, LoadSpec desiredLoadSpec,
-			List<Option> options, MessageLog log, Object consumer, List<String> libraryNameList,
-			TaskMonitor monitor) throws CancelledException, IOException {
+	private List<Loaded<Program>> loadLibraries(Program program, List<String> libraryNameList,
+			ImporterSettings settings) throws CancelledException, IOException {
+		ByteProvider provider = settings.provider();
+		List<Option> options = settings.options();
+		MessageLog log = settings.log();
+		TaskMonitor monitor = settings.monitor();
 
 		List<Loaded<Program>> loadedPrograms = new ArrayList<>();
 		Set<String> processed = new TreeSet<>(getLibraryNameComparator());
-		Queue<UnprocessedLibrary> unprocessed = createUnprocessedQueue(libraryNameList, options);
-		boolean loadLibraries = isLoadLibraries(options);
+		Queue<UnprocessedLibrary> unprocessed = createUnprocessedQueue(libraryNameList, settings);
+		boolean loadLibraries = isLoadLibraries(settings);
 		List<LibrarySearchPath> customSearchPaths =
 			getCustomLibrarySearchPaths(provider, options, log, monitor);
-		List<LibrarySearchPath> searchPaths =
-			getLibrarySearchPaths(program, desiredLoadSpec, options, log, monitor);
-		DomainFolder linkSearchFolder =
-			getLinkSearchFolder(project, program, projectFolderPath, options, log);
-		String libraryDestFolderPath =
-			getLibraryDestinationFolderPath(project, projectFolderPath, options);
+		List<LibrarySearchPath> searchPaths = getLibrarySearchPaths(program, settings);
+		DomainFolder linkSearchFolder = getLinkSearchFolder(program, settings);
+		String libraryDestFolderPath = getLibraryDestinationFolderPath(settings);
 		DomainFolder libraryDestFolder =
-			getLibraryDestinationSearchFolder(project, libraryDestFolderPath, options);
+			getLibraryDestinationSearchFolder(libraryDestFolderPath, settings);
 
 		boolean success = false;
 		try {
@@ -547,30 +591,28 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 					continue;
 				}
 				processed.add(library);
-				if (findLibraryInProject(library, libraryDestFolder, searchPaths, options,
-					monitor) != null) {
+				if (findLibraryInProject(library, libraryDestFolder, searchPaths,
+					settings) != null) {
 					log.appendMsg("Found %s in %s...".formatted(library, libraryDestFolder));
 					log.appendMsg("------------------------------------------------\n");
 				}
-				else if (findLibraryInProject(library, linkSearchFolder, searchPaths, options,
-					monitor) != null) {
+				else if (findLibraryInProject(library, linkSearchFolder, searchPaths,
+					settings) != null) {
 					log.appendMsg("Found %s in %s...".formatted(library, linkSearchFolder));
 					log.appendMsg("------------------------------------------------\n");
 				}
-				else if (isLoadLibraries(options) || shouldSearchAllPaths(program, options, log)) {
-					Loaded<Program> loadedLibrary = loadLibraryFromSearchPaths(library, provider,
-						customSearchPaths, libraryDestFolderPath, unprocessed, depth,
-						desiredLoadSpec, options, log, consumer, monitor);
+				else if (isLoadLibraries(settings) || shouldSearchAllPaths(program, settings)) {
+					Loaded<Program> loadedLibrary = loadLibraryFromSearchPaths(library,
+						customSearchPaths, libraryDestFolderPath, unprocessed, depth, settings);
 					if (loadedLibrary == null) {
-						loadedLibrary = loadLibraryFromSearchPaths(library, provider, searchPaths,
-							libraryDestFolderPath, unprocessed, depth, desiredLoadSpec, options,
-							log, consumer, monitor);
+						loadedLibrary = loadLibraryFromSearchPaths(library, searchPaths,
+							libraryDestFolderPath, unprocessed, depth, settings);
 					}
 					if (loadedLibrary != null) {
-						boolean discarding = !loadLibraries || unprocessedLibrary.discard();
-						loadedLibrary.setDiscard(discarding);
+						boolean temporary = !loadLibraries || unprocessedLibrary.temporary();
+						loadedLibrary.apply(p -> p.setTemporary(temporary));
 						loadedPrograms.add(loadedLibrary);
-						log.appendMsg(discarding ? "Library not saved to project."
+						log.appendMsg(temporary ? "Library not saved to project."
 								: "Saving library to: " + loadedLibrary);
 					}
 					log.appendMsg("------------------------------------------------\n");
@@ -581,7 +623,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		}
 		finally {
 			if (!success) {
-				release(loadedPrograms, consumer);
+				loadedPrograms.forEach(Loaded::close);
 			}
 			Stream.of(customSearchPaths, searchPaths)
 					.flatMap(Collection::stream)
@@ -599,70 +641,76 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * the given {@link List} of search paths
 	 *
 	 * @param library The library to load
-	 * @param provider The {@link ByteProvider} of the program being loaded
 	 * @param searchPaths A {@link List} of {@link LibrarySearchPath}s that will be searched
-	 * @param libraryDestFolderPath The path of the project folder to load the libraries into. 
-	 *   Could be null if the specified project is null or a destination folder path could not be 
-	 *   determined.
 	 * @param unprocessed The {@link Queue} of {@link UnprocessedLibrary unprocessed libraries}
 	 * @param depth The load depth of the library to load
-	 * @param desiredLoadSpec The desired {@link LoadSpec}
-	 * @param options The load options
-	 * @param log The log
-	 * @param consumer A consumer object for {@link DomainObject}s generated
-	 * @param monitor A cancelable task monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The {@link Loaded} library, or null if it was not found. The returned library is the
 	 *   caller's responsibility to release.
 	 * @throws IOException if there was an IO-related problem loading
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	private Loaded<Program> loadLibraryFromSearchPaths(String library, ByteProvider provider,
+	private Loaded<Program> loadLibraryFromSearchPaths(String library,
 			List<LibrarySearchPath> searchPaths, String libraryDestFolderPath,
-			Queue<UnprocessedLibrary> unprocessed, int depth, LoadSpec desiredLoadSpec,
-			List<Option> options, MessageLog log, Object consumer, TaskMonitor monitor)
+			Queue<UnprocessedLibrary> unprocessed, int depth, ImporterSettings settings)
 			throws CancelledException, IOException {
 
 		if (searchPaths.isEmpty()) {
 			return null;
 		}
 
+		List<Option> options = settings.options();
+		LoadSpec desiredLoadSpec = settings.loadSpec();
+		Object consumer = settings.consumer();
+		MessageLog log = settings.log();
+		TaskMonitor monitor = settings.monitor();
+
 		log.appendMsg("Searching %d path%s for library %s...".formatted(searchPaths.size(),
 			searchPaths.size() > 1 ? "s" : "", library));
 
 		Program libraryProgram = null;
-		String simpleLibraryName = FilenameUtils.getName(library);
-		boolean isAbsolute = new File(library).isAbsolute();
 
 		boolean success = false;
 		try {
-			List<FSRL> candidateLibraryFsrls =
+			List<GFile> candidateLibraryFiles =
 				findLibraryOnDisk(library, searchPaths, log, monitor);
-			if (candidateLibraryFsrls.isEmpty()) {
+			if (candidateLibraryFiles.isEmpty()) {
 				log.appendMsg("Library not found.");
 				return null;
 			}
 
-			for (FSRL candidateLibraryFsrl : candidateLibraryFsrls) {
+			for (GFile candidateLibraryFile : candidateLibraryFiles) {
 				monitor.checkCancelled();
+				FSRL candidateLibraryFsrl = candidateLibraryFile.getFSRL();
 				List<String> newLibraryList = new ArrayList<>();
-				libraryProgram = loadLibrary(simpleLibraryName, candidateLibraryFsrl,
-					desiredLoadSpec, newLibraryList, options, consumer, log, monitor);
-				for (String newLibraryName : newLibraryList) {
-					unprocessed.add(new UnprocessedLibrary(newLibraryName, depth - 1, false));
-				}
-				if (libraryProgram == null) {
-					continue;
-				}
-				processLibrary(libraryProgram, library, candidateLibraryFsrl, provider, unprocessed,
-					depth, desiredLoadSpec, options, log, monitor);
-				success = true;
-				String folderPath = libraryDestFolderPath;
-				if (folderPath != null) {
-					if (isAbsolute) {
-						folderPath = joinPaths(folderPath, FilenameUtils.getFullPath(library));
+
+				try (ByteProvider provider = createLibraryByteProvider(candidateLibraryFsrl,
+					desiredLoadSpec, log, monitor)) {
+					LoadSpec libLoadSpec = matchSupportedLoadSpec(settings.loadSpec(), provider);
+					if (libLoadSpec == null) {
+						log.appendMsg("Skipping library which is the wrong architecture: " +
+							candidateLibraryFsrl);
+						continue;
 					}
+					if (isMirroredLayout(settings)) {
+						library = FSUtilities.mirroredProjectPath(candidateLibraryFsrl.getPath());
+					}
+					ImporterSettings librarySettings =
+						new ImporterSettings(provider, library, settings.project(),
+							libraryDestFolderPath, isMirroredLayout(settings), libLoadSpec, options,
+							consumer, log, monitor);
+					libraryProgram = doLoad(newLibraryList, librarySettings);
+					for (String newLibraryName : newLibraryList) {
+						unprocessed.add(new UnprocessedLibrary(newLibraryName, depth - 1, false));
+					}
+					if (libraryProgram == null) {
+						continue;
+					}
+					processLibrary(libraryProgram, library, candidateLibraryFsrl, unprocessed,
+						depth, librarySettings);
+					success = true;
+					return new Loaded<Program>(libraryProgram, librarySettings);
 				}
-				return new Loaded<Program>(libraryProgram, simpleLibraryName, folderPath);
 			}
 		}
 		finally {
@@ -674,8 +722,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	}
 
 	/**
-	 * Find the library within the specified {@link DomainFolder root search folder}.  This method 
-	 * will handle relative path normalization.
+	 * Find the library within the specified {@link DomainFolder}.
 	 * <p>
 	 * If the library path is a simple name without any path separators, only the given folder 
 	 * will be searched.
@@ -686,54 +733,79 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * If the library path has a path and it wasn't found under the given folder, the
 	 * filename part of library path will be used to search the given folder for matches.
 	 * 
-	 * @param library library to find
-	 * @param rootSearchFolder {@link DomainFolder root folder} within which imported libraries will
+	 * @param library The library to find. Depending on the type of library, this could be a simple
+	 *   filename or an absolute path.
+	 * @param folder {@link DomainFolder root folder} within which imported libraries will
 	 *   be searched. If null this method will return null.
 	 * @param searchPaths A {@link List} of {@link LibrarySearchPath}s that will be searched
-	 * @param options The load options
-	 * @param monitor A cancelable task monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The found {@link DomainFile} or null if not found
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	protected DomainFile findLibraryInProject(String library, DomainFolder rootSearchFolder,
-			List<LibrarySearchPath> searchPaths, List<Option> options, TaskMonitor monitor)
+	protected DomainFile findLibraryInProject(String library, DomainFolder folder,
+			List<LibrarySearchPath> searchPaths, ImporterSettings settings)
 			throws CancelledException {
-		if (rootSearchFolder == null) {
+		if (folder == null) {
 			return null;
 		}
 
-		// Lookup by full project path
-		// NOTE: probably no need to support optional extensions and case-insensitivity for this case
-		String projectPath = joinPaths(rootSearchFolder.getPathname(), library);
-		ProjectData projectData = rootSearchFolder.getProjectData();
-		DomainFile ret = projectData.getFile(projectPath);
-		if (ret != null) {
-			return ret;
+		ProjectData projectData = folder.getProjectData();
+
+		if (isMirroredLayout(settings)) {
+			// Perform the lookup based on file system search path layout within the project
+			for (LibrarySearchPath searchPath : searchPaths) {
+				settings.monitor().checkCancelled();
+
+				GFileSystem fs = searchPath.fsRef().getFilesystem();
+				String fsPath = FSUtilities.mirroredProjectPath(
+					FSUtilities.appendPath(fs.getFSRL().getPath(), searchPath.relativeFsPath()));
+				String projectPath =
+					FSUtilities.appendPath(folder.getPathname(), fsPath, library);
+				DomainFolder parentFolder =
+					projectData.getFolder(FilenameUtils.getFullPath(projectPath));
+				if (parentFolder == null) {
+					continue;
+				}
+				DomainFile ret =
+					lookupLibraryInFolder(FilenameUtils.getName(library), parentFolder);
+				if (ret != null) {
+					return ret;
+				}
+			}
+			return null;
 		}
 
-		// Quick lookup by library filename (ignoring full library path) in given folder.
-		// We try this first to hopefully avoid needing to iterate over the files in the folder
-		// factoring in case and extensions
+		if (isAbsoluteLibraryPath(library)) {
+			String parentProjectPath =
+				FSUtilities.appendPath(folder.getPathname(), FilenameUtils.getFullPath(library));
+			folder = projectData.getFolder(parentProjectPath);
+			if (folder == null) {
+				return null;
+			}
+		}
+
 		String libraryName = FilenameUtils.getName(library);
-		if ((ret = rootSearchFolder.getFile(libraryName)) != null) {
-			return ret;
+		DomainFile file = folder.getFile(libraryName);
+		if (file != null) {
+			return file;
 		}
 
-		// Factoring in case and optional file extensions, iterate over given folder looking for
-		// a match
-		boolean noExtension = FilenameUtils.getExtension(libraryName).equals("");
-		Comparator<String> comparator = getLibraryNameComparator();
-		for (DomainFile file : rootSearchFolder.getFiles()) {
-			String candidateName = file.getName();
-			if (isOptionalLibraryFilenameExtensions() && noExtension) {
-				candidateName = FilenameUtils.getBaseName(candidateName);
-			}
-			if (comparator.compare(candidateName, libraryName) == 0) {
-				return file;
-			}
-		}
+		return lookupLibraryInFolder(libraryName, folder);
+	}
 
-		return null;
+	/**
+	 * Looks in the given {@link DomainFolder} for the given name using the loader's 
+	 * {@link #getLibraryNameComparator() library name comparator}
+	 * 
+	 * @param libraryName The library name to search for (no path included)
+	 * @param folder The {@link DomainFolder} to search in
+	 * @return A matching library {@link DomainFile}, or {@code null} if one was not found
+	 */
+	protected DomainFile lookupLibraryInFolder(String libraryName, DomainFolder folder) {
+		return Arrays.stream(folder.getFiles())
+				.filter(df -> getLibraryNameComparator().compare(df.getName(), libraryName) == 0)
+				.findFirst()
+				.orElse(null);
 	}
 
 	/**
@@ -741,10 +813,6 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * {@link GFile files}.
 	 * <p>
 	 * Each search path directory will be searched for the library file in order.
-	 * <p>
-	 * If the library file specifies a path, it is treated as a relative subdirectory of
-	 * each search path directory that is searched, and if not found, the filename part of
-	 * the library is used to search just the search path directory.
 	 * <p>
 	 * If the library specifies an absolute path, its native path is also searched on the local 
 	 * filesystem.
@@ -757,24 +825,25 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @return A {@link List} of {@link GFile files} that match the requested library path
 	 * @throws CancelledException if the user cancelled the operation
 	 */
-	private List<FSRL> findLibraryOnDisk(String library, List<LibrarySearchPath> searchPaths,
+	private List<GFile> findLibraryOnDisk(String library, List<LibrarySearchPath> searchPaths,
 			MessageLog log, TaskMonitor monitor) throws CancelledException {
 
-		List<FSRL> results = new ArrayList<>();
+		List<GFile> results = new ArrayList<>();
 
 		try {
 			for (LibrarySearchPath searchPath : searchPaths) {
 				monitor.checkCancelled();
-				String fullLibraryPath = joinPaths(searchPath.relativeFsPath(), library);
+				String fullLibraryPath =
+					FSUtilities.appendPath(searchPath.relativeFsPath(), library);
 				GFileSystem fs = searchPath.fsRef().getFilesystem();
-				FSRL fsrl = resolveLibraryFile(fs, fullLibraryPath);
-				Optional.ofNullable(fsrl).ifPresent(results::add);
+				GFile file = lookupLibraryInFs(fullLibraryPath, fs);
+				Optional.ofNullable(file).ifPresent(results::add);
 			}
 
-			if (results.isEmpty() && new File(library).isAbsolute()) {
+			if (results.isEmpty() && isAbsoluteLibraryPath(library)) {
 				LocalFileSystem localFS = FileSystemService.getInstance().getLocalFS();
-				FSRL fsrl = resolveLibraryFile(localFS, library);
-				Optional.ofNullable(fsrl).ifPresent(results::add);
+				GFile file = lookupLibraryInFs(library, localFS);
+				Optional.ofNullable(file).ifPresent(results::add);
 			}
 		}
 		catch (IOException e) {
@@ -785,86 +854,35 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	}
 
 	/**
-	 * Imports a library file into a ghidra project. Use this method if you already have
-	 * a {@link ByteProvider} available.
-	 * 
-	 * @param libraryName The name of the library to load
-	 * @param libraryFsrl The library {@link FSRL} to load
-	 * @param desiredLoadSpec The desired {@link LoadSpec}
-	 * @param libraryNameList A {@link List} to be populated with the given library's dependent
-	 *   library names
-	 * @param options The load options
-	 * @param log The log
-	 * @param consumer A consumer object for {@link DomainObject}s generated
-	 * @param monitor A cancelable task monitor
-	 * @return The loaded {@link Program}, or null if the load was not successful
-	 * @throws CancelledException if the user cancelled the load operation
-	 * @throws IOException if there was an IO-related error during the load
-	 */
-	private Program loadLibrary(String libraryName, FSRL libraryFsrl, LoadSpec desiredLoadSpec,
-			List<String> libraryNameList, List<Option> options, Object consumer, MessageLog log,
-			TaskMonitor monitor) throws CancelledException, IOException {
-
-		try (ByteProvider provider =
-			createLibraryByteProvider(libraryFsrl, desiredLoadSpec, log, monitor)) {
-
-			LoadSpec libLoadSpec = matchSupportedLoadSpec(desiredLoadSpec, provider);
-			if (libLoadSpec == null) {
-				log.appendMsg("Skipping library which is the wrong architecture: " + libraryFsrl);
-				return null;
-			}
-
-			return doLoad(provider, libraryName, libLoadSpec, libraryNameList,
-				options, consumer, log, monitor);
-		}
-	}
-
-	/**
 	 * Loads the given provider
 	 * 
-	 * @param provider The {@link ByteProvider} to load
-	 * @param programName The name of the new program
-	 * @param loadSpec The {@link LoadSpec}
 	 * @param libraryNameList A {@link List} to be populated with the loaded program's dependent
 	 *   library names
-	 * @param options The load options
-	 * @param log The log
-	 * @param consumer A consumer object for {@link DomainObject}s generated
-	 * @param monitor A cancelable task monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return The newly loaded {@link Program}
 	 * @throws CancelledException if the user cancelled the load operation
 	 * @throws IOException if there was an IO-related error during the load
 	 */
-	private Program doLoad(ByteProvider provider, String programName, LoadSpec loadSpec,
-			List<String> libraryNameList, List<Option> options, Object consumer, MessageLog log,
-			TaskMonitor monitor) throws CancelledException, IOException {
-		LanguageCompilerSpecPair pair = loadSpec.getLanguageCompilerSpec();
-		Language language = getLanguageService().getLanguage(pair.languageID);
-		CompilerSpec compilerSpec = language.getCompilerSpecByID(pair.compilerSpecID);
+	private Program doLoad(List<String> libraryNameList, ImporterSettings settings)
+			throws CancelledException, IOException {
+		MessageLog log = settings.log();
 
-		monitor.setMessage(provider.getName());
-
-		Address imageBaseAddr = language.getAddressFactory()
-				.getDefaultAddressSpace()
-				.getAddress(
-					loadSpec.getDesiredImageBase());
-		Program program = createProgram(provider, programName, imageBaseAddr, getName(), language,
-			compilerSpec, consumer);
+		Program program = createProgram(settings);
 
 		int transactionID = program.startTransaction("Loading");
 		boolean success = false;
 		try {
-			log.appendMsg("Loading %s...".formatted(provider.getFSRL()));
-			load(provider, loadSpec, options, program, monitor, log);
-			createDefaultMemoryBlocks(program, language, log);
-			libraryNameList.addAll(getLibraryNames(provider, program));
+			log.appendMsg("Loading %s...".formatted(settings.provider().getFSRL()));
+			load(program, settings);
+			createDefaultMemoryBlocks(program, settings);
+			libraryNameList.addAll(getLibraryNames(settings.provider(), program));
 			success = true;
 			return program;
 		}
 		finally {
 			program.endTransaction(transactionID, true); // More efficient to commit when program will be discarded
 			if (!success) {
-				program.release(consumer);
+				program.release(settings.consumer());
 			}
 		}
 	}
@@ -897,9 +915,10 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 
 	private void resolveExternalLibraries(Program program, List<Loaded<Program>> loadedPrograms,
 			List<DomainFolder> searchFolders, List<LibrarySearchPath> fsSearchPaths,
-			List<Option> options, TaskMonitor monitor, MessageLog log)
-			throws CancelledException {
+			ImporterSettings settings) throws CancelledException {
 		ExternalManager extManager = program.getExternalManager();
+		MessageLog log = settings.log();
+		TaskMonitor monitor = settings.monitor();
 		String[] extLibNames = extManager.getExternalLibraryNames();
 		log.appendMsg("Linking the External Programs of '%s' to imported libraries..."
 				.formatted(program.getName()));
@@ -911,15 +930,16 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 			try {
 				Loaded<Program> match = findLibraryInLoadedList(loadedPrograms, externalLibName);
 				if (match != null) {
-					String path = match.getProjectFolderPath() + match.getName();
-					extManager.setExternalPath(externalLibName, path, false);
-					log.appendMsg("  [" + externalLibName + "] -> [" + path + "]");
+					extManager.setExternalPath(externalLibName, FSUtilities
+							.appendPath(match.getProjectFolderPath(), match.getName()),
+						false);
+					log.appendMsg("  [" + externalLibName + "] -> [" + match.getName() + "]");
 				}
 				else {
 					boolean found = false;
 					for (DomainFolder searchFolder : searchFolders) {
 						DomainFile alreadyImportedLib = findLibraryInProject(externalLibName,
-							searchFolder, fsSearchPaths, options, monitor);
+							searchFolder, fsSearchPaths, settings);
 						if (alreadyImportedLib != null) {
 							extManager.setExternalPath(externalLibName,
 								alreadyImportedLib.getPathname(), false);
@@ -947,21 +967,22 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * @param name The name of the library
 	 * @param depth The recursive load depth of the library (based on the original binary being
 	 *   loaded)
-	 * @param discard True if the library should be discarded (not saved) after processing
+	 * @param temporary True if the library is temporary and should be discarded prior to returning
+	 *   from the load
 	 */
-	protected record UnprocessedLibrary(String name, int depth, boolean discard) {/**/}
+	protected record UnprocessedLibrary(String name, int depth, boolean temporary) {/**/}
 
 	/**
 	 * Creates a new {@link Queue} of {@link UnprocessedLibrary}s, initialized filled with the
 	 * library names in the given list
 	 * 
 	 * @param libraryNames A {@link List} of unprocessed library names
-	 * @param options The options
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return A {@link Queue} of {@link UnprocessedLibrary}s
 	 */
 	private Queue<UnprocessedLibrary> createUnprocessedQueue(List<String> libraryNames,
-			List<Option> options) {
-		int depth = getLibraryLoadDepth(options);
+			ImporterSettings settings) {
+		int depth = getLibraryLoadDepth(settings);
 		return libraryNames.stream()
 				.map(name -> new UnprocessedLibrary(name, depth, false))
 				.collect(Collectors.toCollection(LinkedList::new));
@@ -971,7 +992,7 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * A library search path
 	 * 
 	 * @param fsRef The root {@link FileSystemRef}
-	 * @param relativeFsPath A {@link Path} relative to the root of the file system, or null for the
+	 * @param relativeFsPath string path, relative to the root of the file system, or null for the
 	 *   root
 	 */
 	protected record LibrarySearchPath(FileSystemRef fsRef, String relativeFsPath) {}
@@ -999,14 +1020,13 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * Subclasses can override it as needed.
 	 * 
 	 * @param fsrl The search path {@link FSRL}
-	 * @param loadSpec The {@link LoadSpec} to use during load.
-	 * @param monitor A cancelable task monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return True is the search path is valid; otherwise, false
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	protected boolean isValidSearchPath(FSRL fsrl, LoadSpec loadSpec, TaskMonitor monitor)
+	protected boolean isValidSearchPath(FSRL fsrl, ImporterSettings settings)
 			throws CancelledException {
-		monitor.checkCancelled();
+		settings.monitor().checkCancelled();
 		return true;
 	}
 
@@ -1015,17 +1035,16 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * libraries
 	 * 
 	 * @param program The {@link Program} being loaded
-	 * @param loadSpec The {@link LoadSpec} to use during load
-	 * @param options The options
-	 * @param log The log
-	 * @param monitor A cancelable task monitor
+	 * @param settings The {@link Loader.ImporterSettings}
 	 * @return A {@link List} of priority-ordered {@link LibrarySearchPath}s used to search for 
 	 *   libraries
 	 * @throws CancelledException if the user cancelled the load
 	 */
-	protected List<LibrarySearchPath> getLibrarySearchPaths(Program program, LoadSpec loadSpec,
-			List<Option> options, MessageLog log, TaskMonitor monitor) throws CancelledException {
-		if (!isLoadLibraries(options) && !shouldSearchAllPaths(program, options, log)) {
+	protected List<LibrarySearchPath> getLibrarySearchPaths(Program program,
+			ImporterSettings settings) throws CancelledException {
+
+		if (!isLoadLibraries(settings) && !shouldSearchAllPaths(program, settings) &&
+			!(isMirroredLayout(settings) && isLinkExistingLibraries(settings))) {
 			return List.of();
 		}
 
@@ -1033,34 +1052,38 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 		List<LibrarySearchPath> result = new ArrayList<>();
 		boolean success = false;
 		try {
-			for (FSRL fsrl : LibrarySearchPathManager.getLibraryFsrlList(program, log, monitor)) {
+			for (FSRL fsrl : LibrarySearchPathManager.getLibraryFsrlList(program, settings.log(),
+				settings.monitor())) {
 
-				if (!isValidSearchPath(fsrl, loadSpec, monitor)) {
+				if (!isValidSearchPath(fsrl, settings)) {
 					continue;
 				}
 
 				if (fsService.isLocal(fsrl)) {
 					try {
-						FileSystemRef fileRef =
-							fsService.probeFileForFilesystem(fsrl, monitor, null);
-						if (fileRef != null) {
-							result.add(new LibrarySearchPath(fileRef, null));
+						// It might be a container file that we want to look inside of, so probe
+						if (fsService.getLocalFS().getLocalFile(fsrl).isFile()) {
+							FileSystemRef fileRef =
+								fsService.probeFileForFilesystem(fsrl, settings.monitor(), null);
+							if (fileRef != null) {
+								result.add(new LibrarySearchPath(fileRef, null));
+								continue;
+							}
 						}
 					}
 					catch (IOException e) {
-						log.appendMsg(e.getMessage());
+						settings.log().appendMsg(e.getMessage());
 					}
 				}
-				else {
-					try (RefdFile fileRef = fsService.getRefdFile(fsrl, monitor)) {
-						if (fileRef != null) {
-							File f = new File(fileRef.file.getPath()); // File API will sanitize Windows-style paths
-							result.add(new LibrarySearchPath(fileRef.fsRef.dup(), f.getPath()));
-						}
+
+				try (RefdFile fileRef = fsService.getRefdFile(fsrl, settings.monitor())) {
+					if (fileRef != null) {
+						result.add(
+							new LibrarySearchPath(fileRef.fsRef.dup(), fileRef.file.getPath()));
 					}
-					catch (IOException e) {
-						log.appendMsg(e.getMessage());
-					}
+				}
+				catch (IOException e) {
+					settings.log().appendMsg(e.getMessage());
 				}
 			}
 			success = true;
@@ -1077,31 +1100,16 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	 * Find the library within the given {@link List} of {@link Loaded} {@link Program}s
 	 * 
 	 * @param loadedPrograms the list of {@link Loaded} {@link Program}s
-	 * @param libraryName The library name to lookup.  Depending on the type of library, this could
+	 * @param library The library name to lookup.  Depending on the type of library, this could
 	 *   be a simple filename or an absolute path.
 	 * @return The found {@link Loaded} {@link Program} or null if not found
 	 */
 	protected Loaded<Program> findLibraryInLoadedList(List<Loaded<Program>> loadedPrograms,
-			String libraryName) {
-		Comparator<String> comparator = getLibraryNameComparator();
-		boolean noExtension = FilenameUtils.getExtension(libraryName).equals("");
-		boolean absolute = libraryName.startsWith("/");
-		for (Loaded<Program> loadedProgram : loadedPrograms) {
-			String candidateName = loadedProgram.getName();
-			if (isOptionalLibraryFilenameExtensions() && noExtension) {
-				candidateName = FilenameUtils.getBaseName(candidateName);
-			}
-			if (absolute) {
-				String loadedProgramPath = loadedProgram.getProjectFolderPath() + candidateName;
-				if (loadedProgramPath.endsWith(libraryName)) {
-					return loadedProgram;
-				}
-			}
-			else if (comparator.compare(candidateName, libraryName) == 0) {
-				return loadedProgram;
-			}
-		}
-		return null;
+			String library) {
+		return loadedPrograms.stream()
+				.filter(e -> getLibraryNameComparator().compare(e.getName(), library) == 0)
+				.findFirst()
+				.orElse(null);
 	}
 
 	/**
@@ -1127,36 +1135,37 @@ public abstract class AbstractLibrarySupportLoader extends AbstractProgramLoader
 	}
 
 	/**
-	 * Resolves the given library path to an existing {@link FSRL}.  Some {@link Loader}s
-	 * have relaxed requirements on what counts as a valid library filename match.  For example, 
-	 * case-insensitive lookup may be allowed, and filename extensions may be optional.
+	 * Looks in the given {@link GFileSystem} for the given library using the loader's 
+	 * {@link #getLibraryNameComparator() library name comparator}
 	 * 
-	 * @param fs The {@link GFileSystem file system} to resolve in
-	 * @param library The library. This will be either an absolute path, a relative path, or just a 
-	 *   filename.
-	 * @return The library resolved to an existing {@link FSRL}, or null if it did not resolve
+	 * @param fs The {@link GFileSystem file system} to look in in
+	 * @param library The library. Depending on the type of library, this could be a simple filename
+	 *   or an absolute path.
+	 * @return A matching library {@link GFile}, or {@code null} if one was not found
 	 * @throws IOException If an IO-related problem occurred
 	 */
-	protected FSRL resolveLibraryFile(GFileSystem fs, String library) throws IOException {
-		Comparator<String> baseNameComp = getLibraryNameComparator();
-		Comparator<String> nameComp = isOptionalLibraryFilenameExtensions() &&
-			FilenameUtils.getExtension(library).isEmpty()
-					? (s1, s2) -> baseNameComp.compare(FilenameUtils.getBaseName(s1),
-						FilenameUtils.getBaseName(s2))
-					: baseNameComp;
-
-		GFile foundFile = fs.lookup(library, nameComp);
-		return foundFile != null && !foundFile.isDirectory() ? foundFile.getFSRL() : null;
+	protected GFile lookupLibraryInFs(String library, GFileSystem fs) throws IOException {
+		GFile foundFile = fs.lookup(library, getLibraryNameComparator());
+		return foundFile != null && !foundFile.isDirectory() ? foundFile : null;
 	}
 
 	/**
-	 * Gets a {@link Comparator} for comparing library filenames
-	 * 
-	 * @return A {@link Comparator} for comparing library filenames
+	 * {@return a {@link Comparator} for comparing library names}
+	 * <p>
+	 * No assumptions should be made about whether the library name includes path information or
+	 * not.
 	 */
-	private Comparator<String> getLibraryNameComparator() {
-		return isCaseInsensitiveLibraryFilenames()
-				? String.CASE_INSENSITIVE_ORDER
-				: (s1, s2) -> s1.compareTo(s2);
+	protected Comparator<String> getLibraryNameComparator() {
+		return (s1, s2) -> FilenameUtils.getName(s1).compareTo(FilenameUtils.getName(s2));
+	}
+
+	/**
+	 * Performs a platform-independent test to see if the given path is absolute
+	 * 
+	 * @param path The path to test
+	 * @return True if the given path is absolute; otherwise, false
+	 */
+	private boolean isAbsoluteLibraryPath(String path) {
+		return FilenameUtils.getPrefixLength(path) > 0;
 	}
 }
